# 8tree

./: CMakeLists.txt  clean.sh  compile.sh
include/: EightTree.hpp  EigthTree.hpp  Voxel.hpp  VoxelTree.hpp
src/: Voxel.cpp  main.cpp
